# iati-tables

./: .env.test  .gitignore  Dockerfile.dev  README.md  docker-compose.dev.yml  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: ci.yml  lint.yml  test.yml
datasette/: README.md  requirements.in  requirements.txt
datasette/static/: app.css
datasette/templates/: base.template.html  base_iati.html
docs/: conf.py  index.rst  output-formats.rst  process.rst
iati_tables/: __init__.py  database.py  export.py  extract.py  load.py  modelling.py  upload.py
iatidata/: __init__.py
site/public/: index.html
site/src/: App.vue
site/src/views/: Home.vue
tests/: docker-compose.yml  test_iati_tables.py  test_modelling.py
tests/fixtures/test_prefix/: test_activity.xml  test_organisation.xml
tests/integration/: test_integration.py
tests/unit/: test_load.py  test_modelling.py
