[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "iati-tables"
description = "IATI Tables"
version = "1.0.0"
readme = "README.md"
dependencies = [
  "boto3",
  "click",
  "fastavro",
  "google-cloud-bigquery",
  "iatikit",
  "lxml",
  "psycopg2-binary",
  "python-dotenv",
  "sqlalchemy",
  "xmlschema",
  "datasette==0.64.5",
  "datasette-vega==0.6.2",
  "datasette-block-robots==1.1"
]

[project.optional-dependencies]
dev = [
  "black",
  "deepdiff",
  "flake8",
  "Flake8-pyproject",
  "iati-sphinx-theme",
  "isort",
  "mypy",
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "sphinx",
  "sphinx-togglebutton",
  "sphinx-intl",
  "sphinx_rtd_theme",
  "sphinx-autobuild",
  "types-requests",
  "types-lxml",
]

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 119

[[tool.mypy.overrides]]
module = ["iatikit.*", "sqlalchemy.*", "google.oauth2.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
